# HomographyCalculatorWeb

./: .gitignore  README.md  docker-compose.yml
cpp_opencv_api/: CMakeLists.txt  Dockerfile
cpp_opencv_api/libs/json/: json.hpp
cpp_opencv_api/src/: Calibrator.cpp  Calibrator.h  HomographyCalculator.cpp  HomographyCalculator.h  MgenLogger.cpp  MgenLogger.h  RestApiServer.cpp  RestApiServer.h  main.cpp
node_app/: Dockerfile  README.md  package-lock.json  package.json  server.js
node_app/public/css/: style.css
node_app/public/js/: script.js
node_app/views/: index.html
